[package]
name = "waker"
version = "0.1.0"
edition = "2021"

[dependencies]
waker-app = { path = "app" }

[build-dependencies]
waker-app = { path = "app" }
sails-rs = { version = "0.6.2", features = ["wasm-builder"] }
sails-idl-gen = "0.6.2"

[dev-dependencies]
waker = { path = ".", features = ["wasm-binary"] }
waker-client = { path = "client" }
sails-rs = { version = "0.6.2", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
