[package]
name = "sender-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = { version = "0.12", optional = true }
sails-rs = "0.6.2"

[build-dependencies]
sender-app = { path = "../app" }
sails-client-gen = "0.6.2"
sails-idl-gen = "0.6.2"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
